Updated navbar styling on mobile devices. Also fixed edit post so that it does not add button text when edit button is clicked multiple times.

--- a/week7/project4/network/static/network/styles.css
+++ b/week7/project4/network/static/network/styles.css
@@ -4,6 +4,8 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lobster&display=swap");
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11969,6 +11971,40 @@ textarea.form-control-lg {
   outline: 1px solid red;
 }
 
+.lobster-regular {
+  font-family: "Lobster", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.inter-regular {
+  font-family: "Inter", serif;
+  font-optical-sizing: auto;
+  font-weight: normal;
+  font-style: normal;
+}
+
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, p, li, a {
+  font-family: "Inter", sans-serif;
+  color: #333333;
+}
+
+h5, .h5 {
+  font-size: 1rem;
+}
+
+h6, .h6 {
+  font-size: 0.8rem;
+}
+
+p {
+  font-size: 14px;
+}
+
+a {
+  text-decoration: none;
+}
+
 button {
   padding: 0;
 }
@@ -12007,17 +12043,30 @@ textarea {
 }
 .navbar {
   justify-content: space-between;
+  padding: 5px 10px;
 }
 
 .navbar-brand {
   display: flex;
   flex-grow: 1;
+  font-family: "Lobster", sans-serif;
+}
+
+.nav-item {
+  list-style-type: none;
+}
+
+.nav-link {
+  font-size: 14px;
+  margin: 0 5px;
+  color: #333333;
 }
 
 .navbar-items {
   display: flex;
   flex-grow: 2;
   justify-content: flex-end;
+  align-items: center;
 }
 
 .navbar-nav {
@@ -12030,7 +12079,13 @@ textarea {
 }
 
 .profile-img {
-  max-width: 60px;
+  max-width: 30px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.profile-username {
+  display: none;
 }
 
 .profile-details {
@@ -12092,16 +12147,33 @@ textarea {
     width: 1000px;
   }
 }
+.user-details {
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+}
+
+.user-details .profile-img {
+  max-width: 40px;
+  margin-right: 10px;
+}
+
 .post-details {
   display: flex;
   flex-direction: column;
 }
 
-.post-details .profile.img {
-  max-width: 40px;
-}
-
 .post-img {
   max-width: 250px;
   border: 1px solid black;
+}
+
+.like-count {
+  font-family: "Inter", sans-serif;
+  font-size: 14px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
 }/*# sourceMappingURL=styles.css.map */
